# JS_Optimization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
CLI_Frontend/: Cargo.toml  build.rs
CLI_Frontend/src/: main.rs
JS_Lib/: CMakeLists.txt
JS_Lib/include/: CMakeLists.txt  JS_Lib.h
JS_Lib/optimizer_base/: CMakeLists.txt  GlobalOrderRep.cpp  GlobalOrderRep.h  GraphRep.cpp  GraphRep.h  MachineOrderRep.cpp  MachineOrderRep.h  Optimizer.h
JS_Lib/optimizers/: CMakeLists.txt  RandomSearch.cpp  RandomSearch.h  RandomSearchM.cpp  RandomSearchM.h  RandomSearchMachine.cpp  RandomSearchMachine.h  RandomSwap.cpp  RandomSwap.h  ShiftingBottleneck.cpp  ShiftingBottleneck.h
JS_Lib/problem/: Problem.cpp  Problem.h  Solution.cpp  Solution.h  Task.cpp  Task.h
JS_Lib/problem_base/: CMakeLists.txt  Job.cpp  Job.h  Problem.cpp  Problem.h  Solution.cpp  Solution.h  Task.cpp  Task.h
JS_Lib/utility/: CMakeLists.txt  FileCollector.cpp  FileCollector.h  Heap.h  Parsing.h  PyVisualize.cpp  PyVisualize.h  RandomUtility.h  StatsCollector.cpp  StatsCollector.h  ThreadManager.h  Utility.cpp  Utility.h  Wrapper.h
JS_Optimizer/: CMakeLists.txt  JS_Lib_pch.h  config.h.in  main.cpp
JS_Optimizer/include/: JS_Lib.h
JS_Optimizer/optimizer_base/: CMakeLists.txt  DisjunctiveGraphRep.cpp  DisjunctiveGraphRep.h  Optimizer.h  Solution.cpp  Solution.h
JS_Optimizer/optimizers/: CMakeLists.txt  RandomSearch.h  RandomSwap.cpp  RandomSwap.h  ShuffleStep.cpp  ShuffleStep.h
JS_Optimizer/problem/: CMakeLists.txt  Problem.cpp  Problem.h  Solution.cpp  Solution.h  Task.cpp  Task.h
JS_Optimizer/utility/: CMakeLists.txt  Utility.cpp  Utility.h
JS_dynlib/: CMakeLists.txt  JS_dynlib.cpp  JS_dynlib.h
JobShopProblems/: ProblemFormatDescription.txt  SmallTestingProblem.txt  SmallTestingProblem_saved_Detailed.txt  abz5.txt  abz5_saved_Standard.txt  small_basic.txt
JobShopProblems/Instances/: README.md
JobShopProblems/Instances/abz/: abz5.txt  abz6.txt  abz7.txt  abz8.txt  abz9.txt
JobShopProblems/Instances/dmu/: dmu01.txt  dmu02.txt  dmu06.txt  dmu07.txt  dmu16.txt  dmu17.txt  dmu32.txt  dmu33.txt  dmu44.txt  dmu45.txt  dmu51.txt  dmu52.txt  dmu68.txt
JobShopProblems/Instances/ft/: ft06.txt  ft10.txt  ft20.txt
JobShopProblems/Instances/la/: la01.txt  la02.txt  la03.txt  la04.txt  la05.txt  la11.txt  la12.txt  la13.txt  la14.txt  la15.txt  la26.txt  la27.txt  la28.txt  la29.txt  la30.txt  la31.txt  la32.txt  la33.txt  la34.txt  la35.txt
JobShopProblems/Instances/orb/: orb06.txt  orb07.txt  orb08.txt  orb09.txt
JobShopProblems/Instances/swv/: swv06.txt  swv07.txt  swv08.txt
JobShopProblems/Instances/ta/: ta11.txt  ta12.txt  ta13.txt  ta14.txt  ta15.txt  ta26.txt  ta27.txt  ta28.txt
JobShopProblems/Instances/yn/: yn01.txt  yn02.txt  yn03.txt  yn04.txt
JobShopProblems/TestSuite/: yn03.txt
JobShopSolutions/: GraphRepTesting.txt  RandomSearchBestSol_saved.txt  RandomSearchMachine_SmallTestingProblem_sol.txt  RandomSearchMachine_abz5_sol.txt  RandomSearchMachine_dmu68_sol.txt  RandomSearch_abz5_sol.txt  RandomSearch_dmu68_sol.txt  RandomSwapBestSol_saved.txt  RandomSwap_abz5_sol.txt  RandomSwap_abz8_sol.txt  RandomSwap_dmu68_sol.txt  ShiftingBottleneckSol.txt  ShiftingBottleneck_abz5_sol.txt  ShiftingBottleneck_dmu01_sol.txt  ShiftingBottleneck_dmu68_8824_sol.txt  ShiftingBottleneck_dmu68_sol.txt  ShiftingBottleneck_dmu68_sol_8691.txt  ShiftingBottleneck_ft06_sol.txt  ShiftingBottleneck_la02_sol.txt  ShuffelStepInitSol_saved.txt  ShuffleStepBestSol_saved.txt  SmallTestingSolution.txt  SmallTestingSolution_invalid.txt  SmallTestingSolution_saved.txt  Testing_abz5_sol.txt  abz5_RSE1459.txt  abz5_RSE_sol.txt  abz5_RSW1538.txt  abz5_RSW_sol.txt  abz5_randomSearch.txt  abz5_randomSearch_1542.txt  abz5_sol.txt  abz5_sol_1579.txt  abz5_sol_1625.txt  abz5_sol_ShiftingBottleneck_2000it.txt  dmu68_sol_RandomSwap_2000it_bad.txt  dmu68_sol_ShiftingBottleneck_2000it_bad.txt  small_basic_SampleSol_saved.txt  small_basic_SampleSol_saved_valid.txt  small_basic_sampleSol_testing_improved.txt  (+2 more)
JobShopSolutions/Instances/abz/: RandomSwap_abz5_sol.txt  ShiftingBottleneck_abz5_sol.txt
JobShopSolutions/Instances/dmu/: dmu32_4ff74e1563545a5a4a7b15de2559162e_solution_order.txt  dmu32_solutions.txt  dmu33_da93599d0bf14eb6da34225bd1df7020_solution_order.txt  dmu33_solutions.txt
JobShopSolutions/Instances/ft/: ShiftingBottleneck ft06 optimal.txt
PythonScripts/: gnatt_test.py
docs/: JS_Lib_docs.html  index.html
docs/js_optimization/: index.html
docs/js_optimization/resources/: styleguide.css
docs/resources/: credit.md  styleguide.css  styleguide.js
loguru/: README.md  credit.md  loguru.hpp
pythonScripts/: Google_OR_Tools.py  Google_OR_Tools_Solution.py  colorGenerator.py  createGanttFromFile.py  createGnatt.py  createGnattFromFile.py  gnatt_example.py  runOR_Tools.py
